kitten/reported_bugs/c/c-100803/stderr.txt
mutant.c:1:5: error: ‘__GIMPLE’ only valid with ‘-fgimple’

    1 | int __GIMPLE foo ( )

      |     ^~~~~~~~

mutant.c: In function ‘foo’:

mutant.c:3:6: warning: implicit declaration of function ‘bar1’ [-Wimplicit-function-declaration]

    3 | if ( bar1 ( & fieldlist ) )

      |      ^~~~

mutant.c:3:15: error: ‘fieldlist’ undeclared (first use in this function)

    3 | if ( bar1 ( & fieldlist ) )

      |               ^~~~~~~~~

mutant.c:3:15: note: each undeclared identifier is reported only once for each function it appears in

mutant.c:6:1: internal compiler error: in gimple_cond_get_ops_from_tree, at gimple-expr.c:566

    6 | goto bb2 ;

      | ^~~~

0x6ce30e gimple_cond_get_ops_from_tree(tree_node*, tree_code*, tree_node**, tree_node**)

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/gimple-expr.c:566

0xbe94b4 gimple_build_cond_from_tree(tree_node*, tree_node*, tree_node*)

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/gimple.c:536

0x958ba7 c_parser_gimple_if_stmt

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/gimple-parser.c:2252

0x958ba7 c_parser_gimple_compound_statement

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/gimple-parser.c:418

0x958ba7 c_parser_gimple_compound_statement

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/gimple-parser.c:381

0x95a3a7 c_parser_parse_gimple_body(c_parser*, char*, c_declspec_il, profile_count)

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/gimple-parser.c:253

0x949537 c_parser_declaration_or_fndef

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/c-parser.c:2533

0x950db3 c_parser_external_declaration

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/c-parser.c:1777

0x951819 c_parser_translation_unit

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/c-parser.c:1650

0x951819 c_parse_file()

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c/c-parser.c:21994

0x9b1f95 c_common_parse_file()

	/tmp/tmp.SQC1E9RsGE-gcc-builder/gcc/gcc/c-family/c-opts.c:1219

Please submit a full bug report,

with preprocessed source if appropriate.

Please include the complete backtrace with any bug report.

See <https://gcc.gnu.org/bugs/> for instructions.

